# aimbots-dev

./: .clang-format  .devcontainer.json  .gitignore  .gitlab-ci.yml  .gitmodules  Pipfile  README.md  TypeCProject.jdebug  check.py  map.json  organization.txt  pyproject.toml
aimbots-dev/: Pipfile  SConstruct  project.xml
aimbots-dev/build_tools/: __init__.py  extract_robot_type.py  parse_args.py
aimbots-dev/robot-type/: robot_type.hpp
aimbots-dev/src/: drivers.hpp  drivers_singleton.cpp  drivers_singleton.hpp  main.cpp  my_first_file.hpp
aimbots-dev/test/: my_first_test.cpp
aimbots-src/: Pipfile  SConstruct  openocd.cfg  project.xml
aimbots-src/build_tools/: extract_robot_type.py  parse_args.py
aimbots-src/robot-type/: robot_type.hpp
aimbots-src/robot_type/: robot_type.hpp
aimbots-src/src/: drivers.hpp  drivers_singleton.cpp  drivers_singleton.hpp  main.cpp
aimbots-src/taproot/: .cache  README.md  SConscript  project.xml
aimbots-src/test/: my_first_test.cpp
commands/: gcc-10
commands/project/: flash  git_remove_pre_commit_meta_files
commands/run/: all_unit_tests  debug  release  sim  tests
docs/: Doxyfile  conf.py  index.rst  module.rst
documentation/: setup.md
isolated-deploy/: README.md  openocd.cfg
main/: info.yaml
mdev2021/: SConstruct  project.xml
mdev2021/build_tools/: extract_robot_type.py  parse_args.py
mdev2021/src/: main.cpp  (+1 more)
scripts/: build_all_targets.sh  check_license_headers.py  check_singleton_drivers.py  clang-format-all  parse_metrics.py  run_all_unit_tests.sh
template-project/: SConstruct  project.xml
(+4587 files in other folders)
